// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AlertComponent Updates the host class if it can be closed 1`] = `
<cdx-host
  __ngContext__={[Function LRootView]}
  candismiss={[Function Boolean]}
>
  <cdx-alert
    cananimate="true"
  >
    <div
      class="alert alert--candismiss"
      data-fullwidth="false"
      data-type="error"
      data-withmargin="true"
      labelledby="alertLabel"
      role="alertdialog"
    >
      <cdx-svg-icon
        class="alert-icon"
      />
      
      <div
        class="alert-content"
      >
        <span
          class="alert-label"
          id="alertLabel"
        >
          Sorry an error has occurred. If you continue to receive these errors please contact our Customer Service Team on 0800 40 40 40
          
          
        </span>
        
      </div>
      
      <button
        aria-label="Dismiss alert"
        class="alert-closeBtn"
      />
      
    </div>
    
  </cdx-alert>
</cdx-host>
`;

exports[`AlertComponent sets the correct dataType based on the alertType input 1`] = `
<cdx-host
  __ngContext__={[Function LRootView]}
  alertType={[Function String]}
>
  <cdx-alert
    cananimate="true"
  >
    <div
      class="alert"
      data-fullwidth="false"
      data-type="info"
      data-withmargin="true"
      labelledby="alertLabel"
      role="alert"
    >
      <cdx-svg-icon
        class="alert-icon"
      />
      
      <div
        class="alert-content"
      >
        <span
          class="alert-label"
          id="alertLabel"
        >
          Sorry an error has occurred. If you continue to receive these errors please contact our Customer Service Team on 0800 40 40 40
          
          
        </span>
        
      </div>
      
      
    </div>
    
  </cdx-alert>
</cdx-host>
`;
